# kotlin-language-server-bazel

./: .bazelrc  .gitignore  EDITORS.md  LICENSE.txt  MODULE.bazel  README.md  TODO.md  WORKSPACE  build.gradle.kts  gradle.properties  maven_install.json  rules_jvm_external~~maven~maven_install.json  settings.gradle.kts
bazel/aspect/: kotlin_lsp_info.bzl
bazel/aspect/kotlin_lsp/: BUILD.bazel
bazel/aspect/kotlin_lsp/src/kotlin/com/github/srmocher/lsp/: ByteCodeAnalyzer.kt  SourceMetadataExtractor.kt
gradle/: libs.versions.toml
platform/: build.gradle.kts
server/src/main/kotlin/org/javacs/kt/: CompiledFile.kt  CompilerClassPath.kt  Configuration.kt  KotlinLanguageServer.kt  KotlinTextDocumentService.kt  KotlinWorkspaceService.kt  SourceFiles.kt  SourcePath.kt
server/src/main/kotlin/org/javacs/kt/command/: Commands.kt
server/src/main/kotlin/org/javacs/kt/compiler/: Compiler.kt
server/src/main/kotlin/org/javacs/kt/definition/: GoToDefinition.kt
server/src/main/kotlin/org/javacs/kt/hover/: Hovers.kt
server/src/main/kotlin/org/javacs/kt/index/: SymbolIndex.kt
server/src/main/kotlin/org/javacs/kt/kotest/: Tests.kt
server/src/main/kotlin/org/javacs/kt/position/: Position.kt
server/src/main/kotlin/org/javacs/kt/sourcejars/: Parser.kt
server/src/main/kotlin/org/javacs/kt/util/: BazelUtils.kt  PsiUtils.kt
shared/: build.gradle.kts
shared/src/main/kotlin/org/javacs/kt/classpath/: BazelClassPathResolver.kt  CachedClassPathResolver.kt  ClassPathEntry.kt  DefaultClassPathResolver.kt  JarMetadata.kt  WithStdlibResolver.kt
(+1 files in other folders)
