load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "source-metadata-extractor-lib",
    srcs = glob(["src/kotlin/com/github/srmocher/lsp/*.kt"]),
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_ow2_asm_asm",
    ],
)

java_binary(
    name = "source-metadata-extractor",
    main_class = "com.github.srmocher.lsp.SourceMetadataExtractor",
    visibility = ["//visibility:public"],
    runtime_deps = [":source-metadata-extractor-lib"],
)
